--- a/styles/global.css
+++ b/styles/global.css
@@ -1,5 +1,6 @@
 .top-navbar {
     margin-top: 5rem;
+    margin-bottom: 2rem;
 }
 
 small {
@@ -8,4 +9,12 @@ small {
     border-radius: 8px;
     padding: 0.3rem 0.5rem;
     margin-left: 0.3rem;
+}
+
+header {
+    display: block;
+}
+
+footer {
+    display: block;
 }
