--- a/styles/global.css
+++ b/styles/global.css
@@ -1,5 +1,5 @@
 .top-navbar {
-    margin-top: 5rem;
+    margin-top: 2rem;
     margin-bottom: 2rem;
 }
 
@@ -11,10 +11,21 @@ small {
     margin-left: 0.3rem;
 }
 
-header {
-    display: block;
+html, body {
+    height: 100%;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+}
+
+.wrap-content {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    justify-content: space-between;
 }
 
 footer {
-    display: block;
+    flex-shrink: 0;
 }
